[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font.tres" type="Theme" id=2]

[node name="Options" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 81.0
margin_top = 51.0
margin_right = 916.0
margin_bottom = 548.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 833.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Panel"]
margin_left = 132.0
margin_top = 379.0
margin_right = 232.0
margin_bottom = 437.0
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Panel"]
margin_left = 578.0
margin_top = 383.0
margin_right = 707.0
margin_bottom = 446.0
text = "Sauvegarder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueSpeed" type="OptionButton" parent="Panel"]
margin_left = 365.0
margin_top = 322.0
margin_right = 517.0
margin_bottom = 342.0
theme = ExtResource( 2 )
text = "fast"
items = [ "fast", null, false, 2, null, "medium", null, false, 1, null, "slow", null, false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/Save" to="." method="_on_Save_pressed"]
[connection signal="item_selected" from="Panel/DialogueSpeed" to="." method="_on_DialogueSpeed_item_selected"]
